<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoboFTP</string>
    <string name="loginTitleText">FTP Server Login</string>
    <string name="txtServerName">Server Address</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="txtPort">Port Number (Optional: 21)</string>
    <string name="btnLogin">Attempt Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">temp</string>
    <string name="hello_world">Hello world!</string>

</resources>
