<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FTPLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginTitleText"
        android:id="@+id/loginTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_below="@+id/loginTextView"
        android:layout_marginTop="58dp"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/txtServerName"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="text"
        android:hint="@string/txtUsername"
        android:layout_below="@+id/address"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/address" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/username"
        android:hint="@string/txtPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/port"
        android:inputType="text"
        android:hint="@string/txtPort"
        android:singleLine="true"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/port"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:layout_alignEnd="@+id/port" />
</RelativeLayout>
